--- a/order-service.properties
+++ b/order-service.properties
@@ -1,1 +1,5 @@
+message=Welcome from Config Server for ORDER SERVICE!
+order.db.url=jdbc:mysql://localhost:3306/orderdb
+order.db.username=root
+order.db.password=root123
 
